--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
+click==8.1.3
 Flask==2.2.2
 Flask-Login==0.6.2
-Flask-SQLAlchemy==2.5.1
-greenlet==1.1.3
-httplib2==0.20.2
-importlib-metadata==4.6.4
+Flask-SQLAlchemy==3.0.1
+greenlet==1.1.3.post0
+gunicorn==20.1.0
 itsdangerous==2.1.2
-jeepney==0.7.1
 Jinja2==3.1.2
+MarkupSafe==2.1.1
 SQLAlchemy==1.4.41
-typing==3.7.4.3
-typing_extensions==4.3.0
+Werkzeug==2.2.2
